Dopracowanie paru endpointów. Uzaleznienie tworzenia rekordów w bazie na podstawie requestów. Dodanie AuthenticationResponse. Dodanie możliwości rejestracji użytkownika.
